# f1-live-pitwall

./: .gitignore  .pids  README.md  app.py  requirements.txt  session_log.jsonl  start.sh  test.py
backend/: main.py  mcp_server.py  requirements.txt
eval/: run_eval.py
f1_mcp/: pyproject.toml
f1_mcp/src/f1_mcp/: __init__.py  __main__.py  normalize.py  server.py  session.py
f1_mcp/tests/: test_mcp_protocol.py  test_normalize.py  test_server.py  test_session.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWidget.jsx  CircuitSVG.jsx  GlassCard.jsx  Layout.jsx  LoadingSpinner.jsx  PageHeader.jsx  SessionGate.jsx  SessionLoader.jsx  SpeedometerGauge.jsx
frontend/src/hooks/: useApi.js
frontend/src/pages/: AIDebrief.jsx  CircuitLab.jsx  CompareGP.jsx  EnergyMap.jsx  Home.jsx  LivePitWall.jsx  PerformanceLab.jsx  PitStrategy.jsx  RaceCommand.jsx  RaceReplay.jsx  TelemetryLab.jsx
